// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Switch can be a formField 1`] = `
<div
  className="mdc-switch"
>
  <input
    className="mdc-switch__native-control"
    type="checkbox"
  />
  <div
    className="mdc-switch__background"
  >
    <div
      className="mdc-switch__knob"
    />
  </div>
</div>
`;

exports[`components/Switch can be checked 1`] = `
<div
  className="mdc-switch"
>
  <input
    className="mdc-switch__native-control"
    defaultChecked="checked"
    type="checkbox"
  />
  <div
    className="mdc-switch__background"
  >
    <div
      className="mdc-switch__knob"
    />
  </div>
</div>
`;

exports[`components/Switch can be disabled 1`] = `
<div
  className="mdc-switch"
>
  <input
    className="mdc-switch__native-control"
    disabled="disabled"
    type="checkbox"
  />
  <div
    className="mdc-switch__background"
  >
    <div
      className="mdc-switch__knob"
    />
  </div>
</div>
`;

exports[`components/Switch can have a label 1`] = `
<div
  className="rmdc-switch-wrapper"
>
  <div
    className="mdc-switch"
  >
    <input
      className="mdc-switch__native-control"
      type="checkbox"
    />
    <div
      className="mdc-switch__background"
    >
      <div
        className="mdc-switch__knob"
      />
    </div>
  </div>
  <label
    className="mdc-switch-label"
    htmlFor="0.nzvnqz027yl"
  >
    bar
  </label>
</div>
`;

exports[`components/Switch can have an id 1`] = `
<div
  className="mdc-switch"
>
  <input
    className="mdc-switch__native-control"
    type="checkbox"
  />
  <div
    className="mdc-switch__background"
  >
    <div
      className="mdc-switch__knob"
    />
  </div>
</div>
`;
